# embedded-systems-programming-aa-2019-20

./: README.md
assignments/CMake/hello_world/: CMakeLists.txt  hello_world.cpp
assignments/CMake/student/: CMakeLists.txt
assignments/CMake/student/include/: Student.h
assignments/CMake/student/src/: main.cpp
assignments/CMake/studentlib_shared/: CMakeLists.txt
assignments/CMake/studentlib_shared/include/: Student.h
assignments/CMake/studentlib_shared/lib/: Student.cpp
assignments/CMake/studentlib_static/: CMakeLists.txt
assignments/CMake/studentlib_static/include/: Student.h
assignments/CMake/studentlib_static/lib/: Student.cpp
assignments/CMake/usestudentlib/: CMakeLists.txt
assignments/assignment-01-albertotezza/: README.md  alpha_first_string.cpp  alpha_last_string.cpp  functions.h  longest_string.cpp  main.cpp  print.cpp  shortest_string.cpp  string_lengths.cpp
assignments/assignment-02-albertotezza/: Book.cpp  Book.h  Date.cpp  Date.h  README.md  main.cpp
assignments/assignment-03-albertotezza/: Patron.cpp  Patron.h  README.md  main.cpp
assignments/assignment-04-albertotezza/: Book.cpp  Book.h  Date.cpp  Date.h  Library.cpp  Library.h  README.md  main.cpp
assignments/assignment-05-albertotezza/: README.md  main.cpp
assignments/assignment-06-albertotezza/: README.md  bank.cpp  counter.cpp
assignments/assignment-06-albertotezza/third/: main.cpp  readers_and_writers.cpp  readers_and_writers.h
assignments/assignments-solutions/Solution of Assignment 5 on threads/: main.cpp  midsummer.txt
final-project/: PARK1.txt
final-project/homework-albertotezza/: CMakeLists.txt  README.md
final-project/homework-albertotezza/include/: Booking.h  BookingsManagement.h  Car.h  DateTime.h  GlobalVariables.h  IOManagement.h  Parking.h  PaymentsManagement.h
final-project/homework-albertotezza/input_files/: AparcheggioDueIngresso.txt  AparcheggioUnoIngresso.txt  AparcheggioUnoUscita.txt  Aprenotazioni.txt  parcheggioDueIngresso.txt  parcheggioUnoUscita.txt  prenotazioni.txt
final-project/homework-albertotezza/source/: CMakeLists.txt  main.cpp
final-project/homework-albertotezza/tests/: CMakeLists.txt  reading_from_file.cpp  test_currently_parked.cpp  test_limits.cpp  test_parking_spaces.cpp
lectures/tcp socket/: client.cpp  server.cpp  showip.cpp
(+50 files in other folders)
